# some-of-my-university-projects

./: README.md
PP1/: CMakeLists.txt  conf.txt  main.cpp
PP1-devlog/: pp1_devlog1.webm  pp1_devlog12.webm  pp1_devlog15.webm  pp1_devlog16.webm  pp1_devlog3.webm  pp1_devlog4.webm  pp1_devlog6.webm
